--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
         <button id="check-btn">Check</button>
         <p id="output"></p>
       </div>
+      <p>Not storing user's data no need to worry</p>
     </main>
+
+    <footer>
+      <div>
+        <a href="https://www.linkedin.com/in/thisisraviahlad/">LinkedIn</a>
+      </div>
+      <div><a href="https://twitter.com/raviahlad_i">Twitter</a></div>
+      <div>
+        <a href="https://srinivasaraviahlad.netlify.app/">My Website</a>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
