fixed broken link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div><a href="https://twitter.com/raviahlad_i">Twitter</a></div>
       <div>
-        <a href="https://srinivasaraviahlad.netlify.app/">My Website</a>
+        <a href="https://srinivasaravi.netlify.app/">My Website</a>
       </div>
     </footer>
     <script src="./script.js"></script>
